--- a/harryboyd.html
+++ b/harryboyd.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset='UTF-8'/>
     <title>Harry Boyd</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='stylesheets/styles.css'/>
 
-    <script src="jquery-3.2.1.js">
-    </script>
+    <script type="text/javascript" src='scripts/jquery-3.2.1.js'></script>
     <script>
     //$(function() {
     //   var colors = ["#00a06e", "#000000"];
@@ -19,197 +18,230 @@
       var randb = Math.floor(Math.random() * 255);
       var randrr = "rgb(" + randr + "," + randg + "," + randb +")";
 
-      $('.change').css("color", randrr);
+      $('.change-text').css("color", randrr);
+      $('.change-fill').css("background-color", randrr);
     });
     </script>
   </head>
   <body>
 
-    <!--<div class='nav'>
-      <div class='header section'>
-        <p><a href='#top'>HARRY B<span class='happy'>☺</span>YD</a></p>
-        <p><a href='#'>About</a></p>
-      </div>
-    </div>-->
+    <!--HEADER-->
 
     <div class='nav-box'>
-      <div class='nav2'>
+      <div class='nav'>
         <p><a href='#top'>HARRY B<span class='happy'>☺</span>YD</a></p>
         <p><a href='#'>About</a></p>
       </div>
     </div>
 
+    <!--HOME-->
+
+    <div class='sector home'>
+      <div class='flex-container home-head'>
+        <div class='flex1'>
+          <p>
+            Designer
+            <br/>
+            Based in New Zealand
+            <br/>
+            Working at <a class='link' href='http://www.strategycreative.com' target='_blank'>Strategy Creative</a>
+            <br/>
+            <br/>
+            <a class='link' href='mailto:harryboyd1@gmail.com?Subject=Hi%20there' target='_top'>harryboyd1@gmail.com</a>
+            <br/>
+            +64226282975
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='title change-text'>
+            Brand and experience design.
+          </p>
+        </div>
+      </div>
+      <div class='disc-container'>
+        <div class='flex1'></div>
+        <div class='disc-box'>
+          <div class='disc change-fill'></div>
+        </div>
+      </div>
+
+    <!--<div class='flex-container'>
+        <div class='flex1'></div>
+        <div class='flex2 stunt'>
+          <div class='disc change-fill'></div>
+        </div>
+      </div>-->
+    </div>
+
+    <!--CONTENT-->
+    <!--Option 1-->
+
     <div class='sector'>
-      <div class='flex1'>
-        <p class='homestXyle'>
-          Designer
-          <br/>
-          Based in New Zealand
-          <br/>
-          Working at <a class='link' href='http://www.strategycreative.com' target='_blank'>Strategy Creative</a>
-          <br/>
-          <br/>
-          <a class='link' href='mailto:harryboyd1@gmail.com?Subject=Hi%20there' target='_top'>harryboyd1@gmail.com</a>
-          <br/>
-          +64226282975
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p class='title'>
+            2016
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='title'>
+            Slowly Failing
+          </p>
+        </div>
+      </div>
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p>
+            Harry Boyd, Isaac Laughton
+            <br/>
+            Awarded Silver at DINZ Best Design Awards
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='column'>
+            Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
+            Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
+            Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
+            Cum vollaute nonsectiatur maio. Nem fugiandant, cone lab ium quam la nisim audam quasperum eosa conseque labo. Itatur moluptatur assimus daest, quis ipit, test liquo dolupta tuscid ut adipicit offic te volo imusdae secepro tem qui beruptur adionectur?
+            Tem. Nam cones ma nonsed quost, voluptibus.
+            Millace pudam, soluptur?
+            Ga. Udamendios etus. Musanda cumque quiates equiaspe eari to volupta tuscillabore apid quid quo cor atur? Voluptio bla solori
+          </p>
+        </div>
+      </div>
+      <div class='image-container'>
+      </div>
+    </div>
+
+    <!--Option 2-->
+
+    <div class='sector'>
+      <div class='flex3'>
+        <p>
+          Slowly Failing
         </p>
       </div>
-      <div class='flex2'>
-        <p class='title homesXtyle change'>
-          Brand and experience design.
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p>
+            Harry Boyd, Isaac Laughton
+            <br/>
+            Awarded Silver at DINZ Best Design Awards
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='column'>
+            Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
+            Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
+            Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
+            Cum vollaute nonsectiatur maio. Nem fugiandant, cone lab ium quam la nisim audam quasperum eosa conseque labo. Itatur moluptatur assimus daest, quis ipit, test liquo dolupta tuscid ut adipicit offic te volo imusdae secepro tem qui beruptur adionectur?
+            Tem. Nam cones ma nonsed quost, voluptibus.
+            Millace pudam, soluptur?
+            Ga. Udamendios etus. Musanda cumque quiates equiaspe eari to volupta tuscillabore apid quid quo cor atur? Voluptio bla solori
+          </p>
+        </div>
+      </div>
+      <div class='image-container'>
+      </div>
+    </div>
+
+    <!--Option 3-->
+
+    <div class='sector'>
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p class='title'>
+
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='title'>
+            Slowly Failing
+          </p>
+        </div>
+      </div>
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p>
+            Harry Boyd, Isaac Laughton
+            <br/>
+            Awarded Silver at DINZ Best Design Awards
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class=''>
+            Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
+            Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
+            Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
+            Cum vollaute nonsectiatur maio. Nem fugiandant, cone lab ium quam la nisim audam quasperum eosa conseque labo. Itatur moluptatur assimus daest, quis ipit, test liquo dolupta tuscid ut adipicit offic te volo imusdae secepro tem qui beruptur adionectur?
+            Tem. Nam cones ma nonsed quost, voluptibus.
+            Millace pudam, soluptur?
+            Ga. Udamendios etus. Musanda cumque quiates equiaspe eari to volupta tuscillabore apid quid quo cor atur? Voluptio bla solori
+          </p>
+        </div>
+      </div>
+      <div class='image-container'>
+      </div>
+    </div>
+
+    <!--Option 4-->
+
+    <div class='sector'>
+      <p>SLOWLY FAILING</p>
+    </div>
+    <div class='sector'>
+      <div class='flex-container'>
+        <div class='flex1'>
+          <p>
+            Harry Boyd, Isaac Laughton
+            <br/>
+            Awarded Silver at DINZ Best Design Awards
+          </p>
+        </div>
+        <div class='flex2'>
+          <p class='column'>
+            Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
+            Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
+            Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
+          </p>
+        </div>
+      </div>
+      <div class='image-container'>
+      </div>
+    </div>
+
+    <!--Option 4-->
+
+    <div class='sector'>
+      <p>SLOWLY FAILING</p>
+    </div>
+    <div class='sector'>
+      <div class='col1'>
+        <p>
+          Harry Boyd, Isaac Laughton
+          <br/>
+          Awarded Silver at DINZ Best Design Awards
+          <br/>
+          <br/>
+          Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
+          Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
+          Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
         </p>
       </div>
-    </div>
-
-    <div class='site'>
-      <div class='container'>
-
-        <!--<a name='top'></a>
-        <div class='home'>
-          <div class='flex-container'>
-            <div class='flex1'>
-              <p class='homestyle'>
-                Designer
-                <br/>
-                Based in New Zealand
-                <br/>
-                Working at <a class='link' href='http://www.strategycreative.com' target='_blank'>Strategy Creative</a>
-                <br/>
-                <br/>
-                <a class='link' href='mailto:harryboyd1@gmail.com?Subject=Hi%20there' target='_top'>harryboyd1@gmail.com</a>
-                <br/>
-                +64226282975
-              </p>
-            </div>
-            <div class='flex2'>
-              <p class='title homestyle change'>
-                Brand and experience design.
-              </p>
-            </div>
-          </div>
-          <div class='shape-container'>
-            <div class='bar1 purple'></div>
-            <div class='bar2 purple'></div>
-            <div class='circle purple'></div>
-            <div class='box purple'></div>
-          </div>
-          <img class='home-image' src='images/landing.png'></img>
-        </div>-->
-
-        <!--CONTENT-->
-        <!--Slowly Failing-->
-
-        <div class='section-container'>
-          <div class='section'>
-            <div class='flex-container'>
-              <div class='flex1'>
-                <p class='title'>
-                  2016
-                </p>
-              </div>
-              <div class='flex2'>
-                <p class='title'>
-                  Slowly Failing
-                </p>
-              </div>
-            </div>
-            <div class='flex-container'>
-              <div class='flex1'>
-                <p>
-                  Harry Boyd, Isaac Laughton
-                  <br/>
-                  Awarded Silver at DINZ Best Design Awards
-                </p>
-              </div>
-              <div class='flex2'>
-                <p class='column'>
-                  Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
-                  Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
-                  Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
-                  Cum vollaute nonsectiatur maio. Nem fugiandant, cone lab ium quam la nisim audam quasperum eosa conseque labo. Itatur moluptatur assimus daest, quis ipit, test liquo dolupta tuscid ut adipicit offic te volo imusdae secepro tem qui beruptur adionectur?
-                  Tem. Nam cones ma nonsed quost, voluptibus.
-                  Millace pudam, soluptur?
-                  Ga. Udamendios etus. Musanda cumque quiates equiaspe eari to volupta tuscillabore apid quid quo cor atur? Voluptio bla solori
-                </p>
-              </div>
-            </div>
-            <div class='image-container'>
-              <div class='image-block1'></div>
-              <div class='image-block2'></div>
-              <div class='image-block3'></div>
-              <div class='image-block3 unclear'></div>
-            </div>
-          </div>
-        </div>
-
-        <!--Another one...-->
-
-        <div class='section-container'>
-          <div class='section'>
-            <div class='flex-container'>
-              <div class='flex1'>
-                <p>
-                  2016—onwards
-                </p>
-              </div>
-              <div class='flex2'>
-                <p class='title'>
-                  Strategy Creative work
-                </p>
-              </div>
-            </div>
-            <div class='flex-container'>
-              <div class='flex1'>
-                <p>
-
-                </p>
-              </div>
-              <div class='flex2'>
-                <p class='column'>
-                  Ficimodi caborerspel iunda parum fugiam re aut eturiorum asperferio quae as accae omnimo mod qui conserum qui occae es mod quam faccae. Ut haris volenia sum dit doluptios ipient.
-                  Anis et dolo totatur? Itam, qui bea eum cor reiciis quam cus doluptat.
-                  Obitatio etur? Eque quiaepre est, aut quiatur, eaque elendae que eos excescim etur? Quiam es de vellige nieniti uriatib ereptate volest, conempor aribus dem doluptat.
-                  Cum vollaute nonsectiatur maio. Nem fugiandant, cone lab ium quam la nisim audam quasperum eosa conseque labo. Itatur moluptatur assimus daest, quis ipit, test liquo dolupta tuscid ut adipicit offic te volo imusdae secepro tem qui beruptur adionectur?
-                  Tem. Nam cones ma nonsed quost, voluptibus.
-                  Millace pudam, soluptur?
-                  Ga. Udamendios etus. Musanda cumque quiates equiaspe eari to volupta tuscillabore apid quid quo cor atur? Voluptio bla solori
-                </p>
-              </div>
-            </div>
-            <div class='image-container'>
-              <div class='image-block1'></div>
-              <div class='image-block2'></div>
-              <div class='image-block3'></div>
-              <div class='image-block3 unclear'></div>
-            </div>
-          </div>
-        </div>
-
-        <!--FOOTER-->
-
-        <div class='footer'>
-          <p><a href='#top'>^ Top</a></p>
-          <p>Designed and developed by Harry Boyd.</p>
-        </div>
-
+      <div class='image-container'>
       </div>
     </div>
 
-    <!--TEST CALC PROPERTY-->
+    <!--Another one-->
 
-    <div class='calc'>X</div>
 
-    <div class='calc-max'>
-      <div class='plain-block'></div>
-      <div class='plain-block'></div>
-      <div class='plain-block'></div>
-    </div>
+    <!--FOOTER-->
 
-    <div class='image-container'>
-      <div class='image-block1'></div>
-      <div class='image-block2'></div>
-      <div class='image-block3'></div>
-      <div class='image-block3 unclear'></div>
+    <div class='sector last'>
+      <div class='footer'>
+        <p><a href='#top'>^ Top</a></p>
+        <p>Designed and developed by Harry Boyd.</p>
+      </div>
     </div>
 
   </body>
