--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class='nav-box'>
       <div class='nav text-flip'>
-        <p><a href='#top'>HARRY B<span class='happy10'>☺</span>YD</a></p>
+        <p>HARRY B<span class='happy10'>☺</span>YD</p>
         <!--<p><a href='#'>About</a></p>-->
       </div>
     </div>
@@ -67,31 +67,36 @@
         </div>
         <div class='flex1'>
           <p>
+            2017
+            <br/>
+            Silver for <a class='link' href='https://bestawards.co.nz/graphic/student-graphics/massey-university-college-of-creative-arts-35/slowly-failing/' target='_blank'>
+              Slowly Failing</a>
+            <br/>
+            DINZ Best Awards
+            <br/>
+            <br/>
             2016
             <br/>
             BDes (Hons)
             <br/>
             Massey University
-            <br/>
-            <br/>
-            2017
-            <br/>
-            Silver (Slowly Failing)
-            <br/>
-            Best Awards, DINZ
           </p>
         </div>
         <div class='flex2'>
           <p>
             Experience
             <br/>
-            → Strategy Creative
+            → <a class='link' href='http://www.strategycreative.com' target='_blank'>
+              Strategy Creative</a>
             <br/>
-            → Toi Aria, Design for Public Good
+            → <a class='link' href='https://creative.massey.ac.nz/research/toi-aria-design-for-public-good/' target='_blank'>
+              Toi Āria: Design for Public Good</a>
             <br/>
-            → Immigration New Zealand
+            → <a class='link' href='https://www.immigration.govt.nz/' target='_blank'>
+              Immigration New Zealand</a>
             <br/>
-            → Museum of New Zealand, Te Papa Tongarewa
+            → <a class='link' href='https://www.tepapa.govt.nz' target='_blank'>
+              Museum of New Zealand, Te Papa Tongarewa</a>
           </p>
         </div>
         <div class="disc-box mobile">
@@ -103,94 +108,6 @@
         <div class='disc-box'>
           <div class='disc change-fill'></div>
         </div>
-      </div>
-    </div>
-
-    <!--CONTENT-->
-
-    <!--Stickem test-->
-
-    <!--
-    <div class='project-container'>
-      <div class='sector-box stickem'>
-        <div class='sector fill'>
-          <div class='head'>
-            <p>SLOWLY FAILING</p>
-            <p>2017</p>
-          </div>
-        </div>
-      </div>
-      <div class='sector' style='height: 500px;'></div>
-    </div>
-    -->
-
-    <!--Slowly Failing-->
-
-    <div class='project-container'>
-      <div class='sector-box stickem'>
-        <div class='sector fill'>
-          <div class='head'>
-            <p>SLOWLY FAILING</p>
-            <p>2017</p>
-          </div>
-        </div>
-      </div>
-      <div class='sector post-head'>
-        <!--<p>
-          Slowly Failing is an exploration, speculation and reaction
-          to the Post-Auto movement, using today’s available technology
-          to communicate tomorrow’s message. The exhibited experiments
-          remove the human element from automated systems, thus removing
-          the practical purpose and generating ‘useless’ output that
-          serves no need. <br/><br/>This is what Slowly Failing explores — the
-          possibilities and outcomes of technology when the user is
-          removed from the process and the technology is left to
-          produce on its own.
-        </p>
-        <p class='detail'>
-          —
-          <br/>
-          Harry Boyd, Isaac Laughton
-          <br/>
-          Awarded Silver at DINZ Best Design Awards
-        </p>-->
-        <img class='imgL' src='images/SF_01.jpg'></img>
-        <img class='img1' src='images/SF_02.jpg'></img>
-        <img class='img2' src='images/SF_03.jpg'></img>
-        <img class='img2' src='images/SF_04.jpg'></img>
-        <img class='img3' src='images/SF_05.jpg'></img>
-        <img class='img4' src='images/SF_06.jpg'></img>
-        <img class='img5' src='images/SF_07.jpg'></img>
-        <img class='img5' src='images/SF_08.jpg'></img>
-        <img class='img5' src='images/SF_09.jpg'></img>
-        <img class='img5' src='images/SF_10.jpg'></img>
-      </div>
-    </div>
-
-    <!--Another one-->
-
-    <!--
-    <div class='project-container'>
-      <div class='sector-box stickem'>
-        <div class='sector fill'>
-          <div class='head'>
-            <p>NAME</p>
-            <p>YEAR</p>
-          </div>
-        </div>
-      </div>
-      <div class='sector post-head'>
-        X
-      </div>
-    </div>
-    -->
-
-    <!--FOOTER-->
-
-    <div class='sector last'>
-      <div class='footer text-flip'>
-        <p><a href='#top'>↑</a></p>
-        <p>Designed and developed by Harry Boyd.</p>
       </div>
     </div>
 
